Fixed all the checkstyle errors.